--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@
           </div>
           <div id="nosotrosValoresTitleContainer" class="nosotros_valores_title_container wow animate__animated animate__fadeInLeft">
             <h3 class="h3 nosotros_valores_title wow animate__animated animate__fadeInLeft">
-              Nuestro ADN
+              NUESTRO ADN
             </h3>
             <p class="nosotros_valores_paragraph">
-              Compuesto por valores que impregnan cada una de nuestras propuestas con las que buscamos impulsarte.
-            </p>
+              Nos constituimos con valores que impregnan y trazan cada una de nuestras propuestas, con las que buscamos impulsarte para el logro de tus metas y objetivos.            </p>
           </div>
           <div id="nosotrosValoresContainer" class="nosotros_valores_container wow animate__animated animate__fadeInLeft">
             <div class="adn_container">
@@ -244,7 +243,7 @@
             </div>
           </div>
           <div id="nosotrosMisionContainer" class="nosotros_mision_container wow animate__animated animate__fadeInLeft">
-            <h3 class="h3 nosotros_mision_title">Nuestra misión</h3>
+            <h3 class="h3 nosotros_mision_title">NUESTRA MISIÓN</h3>
             <p class="nosotros_mision_paragraph">
               Buscamos mediante la psicología laboral, el diseño gráfico y la programación, brindar servicios que en conjunto permitan impulsar a quienes quieran destacar en el mercado.
               <br>A través del cruce de nuestra puerta multidisciplinaria, el impacto de nuestro proyecto religará los valores para acompañar el crecimiento en potencia de cada uno de los proyectos.
@@ -259,9 +258,9 @@
               ¿POR QUÉ ELEGIRNOS?
             </h2>
             <p id="nosotrosSpeachParagraph" class="nosotros_speach_paragraph">
-              Porque al tener un equipo conectado podrás encontrar las soluciones de manera ágil y eficaz, es decir brindamos todas las soluciones en conjunto y en un solo lugar.<br>
-              Contamos con un proceso de construcción y evaluación para garantizar la calidad de nuestro servicio. <br>
-              Al elegirnos contarás con un producto final que respeta la identidad de marca e identidad visual de tu emprendimiento o marca, un servicio personalizado que te impulsa a lograr tus metas.
+              Al tener un equipo conectado podrás encontrar las soluciones de manera ágil y eficaz, ya que brindamos todas las soluciones en conjunto y en un solo lugar.<br>
+              Acompañamos a cada uno de los proyectos con un proceso de construcción y evaluación para garantizar la calidad de nuestro servicio.<br>
+              Al elegirnos contarás con un producto final que respeta la identidad de marca e identidad visual de tu emprendimiento. Un servicio personalizado que te impulsa a lograr tus metas.
             </p>  
           </div>
           <div class="beneficios_container" id="beneficiosContainer">
@@ -295,13 +294,12 @@
         </h2>
         <article class="servicio_principal_container wow animate__animated animate__fadeInLeft">
           <div class="containerStar">
-            <h3 class="h3 servicioPrincipal_title">Nuestro producto estrella</h3>
+            <h3 class="h3 servicioPrincipal_title">NUESTRO PRODUCTO ESTRELLA</h3>
             <img src="./assets/icons3D/star-dynamic-premium.png" class="servicioPrincipal_star" alt="">
           </div>          
           <h4 class="h4 caminoDigital_Title">IMPULSO DE CAMINO DIGITAL</h4>
           <p class="caminoDigital_paragraph">
-            Es un proceso que respeta tres etapas con las que construiremos las bases firmes para el despegue exitoso de tu marca, generando una identidad consistente que se transmitirá tanto en lo visual como por medio de las herramientas web que desarrollaremos para conseguir los objetivos propuestos.
-          </p>
+            Es un proceso que respeta tres etapas con las que construiremos las bases firmes para el despegue exitoso de tu marca. Generaremos una identidad consistente que se transmitirá tanto en lo visual como por medio de las herramientas web que desarrollaremos para conseguir los objetivos propuestos          </p>
           <div class="impulsos_container" id="impulsosContainer">
             <div id="impulsosContent" class="impulsos_content borderEffects">
               <span></span><span></span><span></span><span></span>
@@ -316,7 +314,7 @@
               <p>IMPULSO WEB</p>
             </div>
           </div>
-          <h3 class="h4 caminoDigital_pie">Conocelos y asesorate</h3>
+          <h3 class="h4 caminoDigital_pie">VAMOS A CONOCERLOS</h3>
         </article>
         <article id="containerContentImpulso" class="container_content_impulso">
           <div id="contenedorImagenImpulsoMarca" class="contenedor_impulso_img">
@@ -324,7 +322,10 @@
           </div>
           <div id="containerSpeachImpulsoMarca" class="container_impulso_speach wow animate__animated animate__fadeInLeft delay-1">
             <h3 class=" h3 impulso_title">IMPULSO DE IDENTIDAD DE MARCA</h3>
-            <p class="impulso_paragraph"> El primer paso de este proceso es de descubrimiento y arquitectura.<br>Nos interiorizamos en tus objetivos, metas, el corazón de tu marca y su historia, para luego construir la identidad de tu marca.</p>
+            <p class="impulso_paragraph">
+              En base a diferentes estrategias, un análisis del cliente y sus objetivos, construimos - diseñamos y reevaluamos la identidad de tu marca, por lo que generaremos que cada proyecto sea único.<br>
+              Los comienzos son difíciles, el primer paso es un proceso de descubrimiento. Nos interiorizamos en tus objetivos, las metas de tu emprendimiento, el corazón de tu marca y su historia detrás de ella.
+            </p>
           </div>
         </article>
         <article id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-2">
@@ -333,7 +334,10 @@
           </div>
           <div id="containerParagraphImpulsoVisual" class="container_impulso_speach">
             <h3 class=" h3 impulso_title">IMPULSO DE IDENTIDAD VISUAL </h3>
-            <p class="impulso_paragraph">Continuamos el proceso con el diseño o rediseño visual de tu emprendimiento, el cual está basado en la identidad que construimos en el primer paso. Una visual que respete la historia e identidad, genera diferencias que te potenciarán.</p>
+            <p class="impulso_paragraph">
+              Introducirte al mercado es más fácil con una marca original y una imagen potente que trasmita el corazón de tu proyecto. 
+              Continuamos el proceso con el diseño emprendimiento, para convertir el resultado del primer proceso en identidad visual. ¿El diseño de tu marca se quedó en el tiempo y no estás conforme con su aspecto? Podemos rediseñarla para que se ajuste a tus objetivos y metas.
+            </p>
           </div>          
         </article>
         <article id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-3">
@@ -342,15 +346,17 @@
           </div>
           <div id="containerParagraphImpulsoWeb" class="container_impulso_speach">
             <h3 class=" h3 impulso_title">IMPULSO WEB</h3>
-            <p class="impulso_paragraph">Como resultado final del proceso, tendrás una serie de herramientas web.<br>La principal será una página web personificada, con la voz e imagen que transmitirá la identidad de tu marca, plasmar los valores que te definen y a destacar en el mercado.</p>
+            <p class="impulso_paragraph">
+              Como resultado final del proceso, tendrás una página web adaptada a tus necesidades y que te ayudará a plasmar los valores que te definen y a destacar en el mercado.<br>
+              Construimos sitios web full responsive que se adaptan a todos los dispositivos (tablets, celulares, notebooks, etc). Estamos siempre estudiando las últimas tendencias en diseño web para aplicarlas a tu proyecto de manera efectiva.             </p>
           </div>
         </article>   
         <div class="asesorate">
           <div class="asesorate_container">
-            <a href="#sectionContacto" class="asesorate_btn">Asesorate!</a>          
+            <a href="#sectionContacto" class="asesorate_btn">¡Asesórate!</a>          
           </div>
         </div>        
-        <h3 class="h3 carousel_title wow animate__animated animate__fadeInLeft">Más productos a tu disposición</h3>
+        <h3 class="h3 carousel_title wow animate__animated animate__fadeInLeft">MÁS SERVICIOS</h3>
         <article class="carousel_article">
           <div class="swiper mySwiper carousel_container">
               <div class="swiper-wrapper carousel_content">
@@ -360,8 +366,7 @@
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
-                              Las redes sociales son la vía de contacto más utilizada, es importante un buen uso de ellas. Enterate cómo
-                          </p>
+                            ¡Hace que te vean! Las redes sociales son la vía de contacto más utilizada, por lo que es importante hacer un buen uso de ellas. ¡Entérate cómo!                           </p>
                           <div class="contenedor_btn_card">
                               <a href="#" class="btn_card">Consultar</a>          
                           </div>
@@ -373,8 +378,7 @@
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
-                              Registramos tu marca, dominios y/o patentes para proteger tu emprendimiento. Aesoramos como aprovechar lo legal a tu favor.
-                          </p>
+                            ¿Sabías podes proteger tu emprendimiento? Realizamos registros de dominios, patentes y marcas. Asesórate para aprovechar lo legal a tu favor.                          </p>
                           <div class="contenedor_btn_card">
                               <a href="#" class="btn_card">Consultar</a>          
                           </div>
@@ -386,7 +390,7 @@
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
-                              Aprovechá los beneficios que te brindan Google, Instagram, Twitter y YouTube
+                            La tecnología nos brinda muchas herramientas. Entérate cómo las diferentes plataformas de Google, Instagram, Facebook, YouTube y Twitter pueden beneficiarte.
                           </p>
                           <div class="contenedor_btn_card">
                               <a href="#" class="btn_card">Consultar</a>          
@@ -399,7 +403,7 @@
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
-                            Universo gráfico, manual de estilos, papelería, folletería, publicidad, merchandising, y ¡mucho más!
+                            El universo gráfico de tu marca de la mano de folletería, papelería, merchandising, publicidad, manual de estilos y mucho más. Elegí impreso y/o digital.
                           </p>
                           <div class="contenedor_btn_card">
                               <a href="#" class="btn_card">Consultar</a>          
@@ -412,14 +416,14 @@
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
-                              Obtené fotografías profesionales para utilizar en tu web y redes sociales.
+                            Fotografía profesional para impulsar tu web, redes sociales y marketing.
                           </p>
                           <div class="contenedor_btn_card">
                               <a href="#" class="btn_card">Consultar</a>          
                           </div>
                       </div>
                   </div>
-                  <div id="card" class="swiper-slide card">
+<!--                   <div id="card" class="swiper-slide card">
                       <div class="dp">
                           <h3 class="card_title">SERVICIO</h3>
                       </div>
@@ -431,7 +435,7 @@
                               <a href="#" class="btn_card">Consultar</a>          
                           </div>
                       </div>
-                  </div>
+                  </div> -->
                   <!-- <div class="swiper-pagination"></div> -->
               </div>
           </div>
@@ -449,12 +453,12 @@
               <i class="fa fa-facebook"></i>
             </a>
             <!-- Instagram -->
-            <a href="" type="button" class="contacto_redes_anchord">
+            <a href="https://instagram.com/impulsardev?igshid=YmMyMTA2M2Y=" type="button" class="contacto_redes_anchord">
               <i class="fa fa-brands fa-instagram"></i>
             </a>
             </a>
             <!-- Whatsapp -->
-            <a href="" type="button" class="contacto_redes_anchord">
+            <a href="https://api.whatsapp.com/send?phone=5492616307131" type="button" class="contacto_redes_anchord">
               <i class="fa fa-brands fa-whatsapp"></i>  
             </a>
         </div>
@@ -474,10 +478,10 @@
                 <label for="telefono" class="form-label">Teléfono</label>
                 <input class="section__formulario__contenedor__form-input" type="tel" name="telefono" placeholder="+5492612481549"><br>
             </div>
-            <div class="mb-3 form-check contenedor_checkbox">
+<!--             <div class="mb-3 form-check contenedor_checkbox">
                 <input type="checkbox" class="form-check-input" id="formCheck" required>
                 <label class="form-check-label" for="formCheck">Acepto los términos y condiciones</label>
-            </div>
+            </div> -->
           </div>
           <div id="formularioContenedorTextarea" class="formulario_contenedor_textarea">  
             <h3 class="h3">¡ENVÍANOS TU MENSAJE!</h3>
@@ -517,7 +521,7 @@
           </div>
         </article> -->
         <article class="contacto_calendly">
-          <h4 class="h4 contacto_calendly_title">Agendá tu consulta</h4>
+          <h4 class="h4 contacto_calendly_title">ANOTÁ TU CONSULTA</h4>
           <!-- Principio del widget integrado de Calendly -->
           <div class="calendly-inline-widget calendly" data-url="https://calendly.com/impulsar-dev" style="min-width:320px;height:630px;"></div>
           <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
@@ -525,7 +529,7 @@
         </article>
       </section>
       <section id="sectionWhatsapp">
-        <a href="https://api.whatsapp.com/send?phone=5492615955480" target="_blank">
+        <a href="https://api.whatsapp.com/send?phone=5492616307131" target="_blank">
           <i class="fa fa-brands fa-whatsapp whatsapp"></i>
         </a>
       </section>
@@ -553,16 +557,16 @@
                   <h5 class="font-weight-bold text-uppercase mb-4">Secciones</h5>            
                   <ul class="list-unstyled">
                       <li><p>
-                          <a href="">Servicios</a>
+                          <a href="#indexMain">Inicio</a>
                       </p></li>
                       <li><p>
-                          <a href="">¿Quiénes somos?</a>
+                          <a href="#sectionNosotros">¿Quiénes somos?</a>
                       </p></li>
                       <li><p>
-                          <a href="">¿Por qué elegirnos</a>
+                          <a href="#sectionServicios">¿Qué ofrecemos?</a>
                       </p></li>
                       <li><p>
-                          <a href="">Contacto</a>
+                          <a href="#sectionContacto">Contacto</a>
                       </p></li>
                   </ul>
               </div>
@@ -581,11 +585,9 @@
                       </p></li>
                       <li>
                       <p>
-                          <i class="bi bi-telephone"></i> + 549 261 248-1549</p>
+                          <i class="bi bi-telephone"></i> + 54 261 630-6131</p>
                       </li>
-                      <li><p>
-                          <i class="bi bi-telephone"></i> + 549 261 595-5480
-                      </p></li>
+
                   </ul>
               </div>
               <!-- linea -->    
@@ -600,12 +602,12 @@
                         <i class="fa fa-facebook"></i>
                       </a>
                       <!-- Instagram -->
-                      <a href="" type="button" class="socialMedia_anchord" target="_blank">
+                      <a href="https://instagram.com/impulsardev?igshid=YmMyMTA2M2Y=" type="button" class="socialMedia_anchord" target="_blank">
                         <i class="fa fa-brands fa-instagram"></i>
                       </a>
                       </a>
                       <!-- Whatsapp -->
-                      <a href="" type="button" class="socialMedia_anchord" target="_blank">
+                      <a href="https://api.whatsapp.com/send?phone=5492616307131" type="button" class="socialMedia_anchord" target="_blank">
                         <i class="fa fa-brands fa-whatsapp"></i>  
                       </a>
                   </div>
@@ -616,7 +618,7 @@
       <!-- Cierra footer principal-->   
       <!-- Abre Copyright -->
       <div class="container footer__copyright text-center">
-          <a href=""> Copyright © 2022 | Impulsar Dev Solutions 
+          <a href=""> COPYRIGHT © 2022 | IMPULSAR DEV SOLUTIONS 
           </a>
       </div>
       <!-- Cierra Copyright -->
