--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
           <div id="nosotrosMisionContainer" class="nosotros_mision_container wow animate__animated animate__fadeInLeft">
             <h3 class="h3 nosotros_mision_title">NUESTRA MISIÓN</h3>
             <p class="nosotros_mision_paragraph">
-              Buscamos mediante la psicología laboral, el diseño gráfico y la programación, brindar servicios que en conjunto permitan impulsar a quienes quieran destacar en el mercado.
-              <br>A través del cruce de nuestra puerta multidisciplinaria, el impacto de nuestro proyecto religará los valores para acompañar el crecimiento en potencia de cada uno de los proyectos.
+              Mediante la psicología laboral, el derecho, el diseño gráfico y la programación, buscamos brindar servicios que en conjunto permitan impulsar a quienes quieran destacar en el mercado.<br>
+              A través del cruce de nuestra puerta multidisciplinaria, el impacto de nuestro equipo logrará religar los valores que acompañarán el crecimiento en potencia de cada uno de tus proyectos.
             </p>
             <div id="hashtagContainer" class="nosotros_mision_hashtag_container">
               <img src="./assets/icons3D/rocket-dynamic-color.png" class="hashtagRocket"></img>
@@ -378,7 +378,8 @@
                       </div>
                       <div class="card_content">
                           <p class="card_paragraph">
-                            ¿Sabías podes proteger tu emprendimiento? Realizamos registros de dominios, patentes y marcas. Asesórate para aprovechar lo legal a tu favor.                          </p>
+                            ¿Sabías que podes proteger tu emprendimiento? Realizamos registros de dominios, patentes y marcas. Asesórate para aprovechar lo legal a tu favor.
+                          </p>
                           <div class="contenedor_btn_card">
                               <a href="#" class="btn_card">Consultar</a>          
                           </div>
