--- a/index.html
+++ b/index.html
@@ -109,63 +109,73 @@
         </h2>
         <article class="servicio_principal_container wow animate__animated animate__fadeInLeft">
           <div class="containerStar">
-            <h3 class="h3 servicioPrincipal_title">NUESTRO PRODUCTO ESTRELLA</h3>
-            <img src="./assets/icons3D/star-dynamic-premium.png" class="servicioPrincipal_star" alt="">
-          </div>          
-          <h4 class="h4 caminoDigital_Title">IMPULSO DE CAMINO DIGITAL</h4>
-          <p class="caminoDigital_paragraph">
-            Es un proceso que respeta tres etapas con las que construiremos las bases firmes para el despegue exitoso de tu marca. Generaremos una identidad consistente que se transmitirá tanto en lo visual como por medio de las herramientas web que desarrollaremos para conseguir los objetivos propuestos          </p>
-          <div class="impulsos_container" id="impulsosContainer">
-            <div id="impulsosContent" class="impulsos_content borderEffects">
-              <span></span><span></span><span></span><span></span>
-              <p>IMPULSO DE IDENTIDAD DE MARCA</p>
-            </div>
-            <div id="impulsosContent" class="impulsos_content borderEffects">
-              <span></span><span></span><span></span><span></span>
-              <p>IMPULSO DE IDENTIDAD DE VISUAL</p>
-            </div>
-            <div id="impulsosContent" class="impulsos_content borderEffects">
-              <span></span><span></span><span></span><span></span>                
-              <p>IMPULSO WEB</p>
-            </div>
-          </div>
-          <h3 class="h4 caminoDigital_pie">VAMOS A CONOCERLOS</h3>
-        </article>
-        <article id="containerContentImpulso" class="container_content_impulso">
-          <div id="contenedorImagenImpulsoMarca" class="contenedor_impulso_img">
-            <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_ EN BLANCO-11.png" alt="" class="img_impulso">      
-          </div>
-          <div id="containerSpeachImpulsoMarca" class="container_impulso_speach wow animate__animated animate__fadeInLeft delay-1">
-            <h3 class=" h3 impulso_title">IMPULSO DE IDENTIDAD DE MARCA</h3>
-            <p class="impulso_paragraph">
-              En base a diferentes estrategias, un análisis del cliente y sus objetivos, construimos - diseñamos y reevaluamos la identidad de tu marca, por lo que generaremos que cada proyecto sea único.<br>
-              Los comienzos son difíciles, el primer paso es un proceso de descubrimiento. Nos interiorizamos en tus objetivos, las metas de tu emprendimiento, el corazón de tu marca y su historia detrás de ella.
-            </p>
+            <i class="fa fa-solid fa-star stars_icon"></i>
+            <h3 class="h3 servicioPrincipal_title">
+              NUESTROS PRODUCTOS ESTRELLAS
+            </h3>
+            <i class="fa fa-solid fa-star stars_icon"></i>
+            <!-- <img src="./assets/icons3D/star-dynamic-premium.png" class="servicioPrincipal_star" alt=""> -->
           </div>
         </article>
-        <article id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-2">
-          <div id="contenedorImagenImpulsoVisual" class="contenedor_impulso_img">
-            <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_ EN BLANCO-11.png" alt="" class="img_impulso">      
+        <article class="cardsImpulsos_container">
+          <div id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-1">
+            <div id="contenedorImagenImpulsoMarca" class="contenedor_impulso_img">
+              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_ EN BLANCO-11.png" alt="" class="img_impulso">      
+            </div>
+            <div id="containerSpeachImpulsoMarca" class="container_impulso_speach">
+              <h3 class=" h3 impulso_title">IMPULSO DE IDENTIDAD DE MARCA</h3>
+              <p class="impulso_paragraph">
+                Desarrollá una base sólida de tu marca y dale ese impulso en el mercado.
+              </p>
+            </div>
+            <div class="contenedor_btns">
+              <div class="contenedor_btn_pulse btn_impulsos">
+                <a href="#" class="btn_pulse">Más detalles</a>          
+              </div>
+              <div class="contenedor_btn_pulse btn_impulsos">
+                <a href="#" class="btn_pulse">Agendar un encuentro</a>          
+              </div>
+            </div>
           </div>
-          <div id="containerParagraphImpulsoVisual" class="container_impulso_speach">
-            <h3 class=" h3 impulso_title">IMPULSO DE IDENTIDAD VISUAL </h3>
-            <p class="impulso_paragraph">
-              Introducirte al mercado es más fácil con una marca original y una imagen potente que trasmita el corazón de tu proyecto. 
-              Continuamos el proceso con el diseño emprendimiento, para convertir el resultado del primer proceso en identidad visual. ¿El diseño de tu marca se quedó en el tiempo y no estás conforme con su aspecto? Podemos rediseñarla para que se ajuste a tus objetivos y metas.
-            </p>
-          </div>          
+          <div id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-2">
+            <div id="contenedorImagenImpulsoVisual" class="contenedor_impulso_img">
+              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_ EN BLANCO-11.png" alt="" class="img_impulso">      
+            </div>
+            <div id="containerParagraphImpulsoVisual" class="container_impulso_speach">
+              <h3 class=" h3 impulso_title">IMPULSO DE IDENTIDAD VISUAL </h3>
+              <p class="impulso_paragraph">
+                Desarollá el estilo gráfico de tu marca, dale ese impulso en el mercado.
+              </p>
+            </div>  
+            <div class="contenedor_btns">
+              <div class="contenedor_btn_pulse btn_impulsos">
+                <a href="#" class="btn_pulse">Más detalles</a>          
+              </div>
+              <div class="contenedor_btn_pulse btn_impulsos">
+                <a href="#" class="btn_pulse">Agendar un encuentro</a>          
+              </div>
+            </div>      
+          </div>
+          <div id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-3">
+            <div id="contenedorImagenImpulsoWeb" class="contenedor_impulso_img">
+              <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_ EN BLANCO-11.png" alt="" class="img_impulso">   
+            </div>
+            <div id="containerParagraphImpulsoWeb" class="container_impulso_speach">
+              <h3 class=" h3 impulso_title">IMPULSO WEB</h3>
+              <p class="impulso_paragraph">
+                Desarrollá la página web de tu marca, sumale herramientas web, dale ese impulso y destacar en el mercado.
+              </p>
+            </div>
+            <div class="contenedor_btns">
+              <div class="contenedor_btn_pulse btn_impulsos">
+                <a href="#" class="btn_pulse">Más detalles</a>          
+              </div>
+              <div class="contenedor_btn_pulse btn_impulsos">
+                <a href="#" class="btn_pulse">Agendar un encuentro</a>          
+              </div>
+            </div>
+          </div>
         </article>
-        <article id="containerContentImpulso" class="container_content_impulso wow animate__animated animate__fadeInLeft delay-3">
-          <div id="contenedorImagenImpulsoWeb" class="contenedor_impulso_img">
-            <img src="./assets/composiciones del logo/COHETE_ISOTIPO/PNG/COHETE_ EN BLANCO-11.png" alt="" class="img_impulso">   
-          </div>
-          <div id="containerParagraphImpulsoWeb" class="container_impulso_speach">
-            <h3 class=" h3 impulso_title">IMPULSO WEB</h3>
-            <p class="impulso_paragraph">
-              Como resultado final del proceso, tendrás una página web adaptada a tus necesidades y que te ayudará a plasmar los valores que te definen y a destacar en el mercado.<br>
-              Construimos sitios web full responsive que se adaptan a todos los dispositivos (tablets, celulares, notebooks, etc). Estamos siempre estudiando las últimas tendencias en diseño web para aplicarlas a tu proyecto de manera efectiva.             </p>
-          </div>
-        </article>   
         <div class="asesorate">
           <div class="asesorate_container">
             <a href="#sectionContacto" class="asesorate_btn">¡Asesórate!</a>          
