--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <div class="containerStar">
             <i class="fa fa-solid fa-star stars_icon"></i>
             <h3 class="h3 servicioPrincipal_title">
-              NUESTROS PRODUCTOS ESTRELLAS
+              NUESTROS PRODUCTOS ESTRELLA
             </h3>
             <i class="fa fa-solid fa-star stars_icon"></i>
             <!-- <img src="./assets/icons3D/star-dynamic-premium.png" class="servicioPrincipal_star" alt=""> -->
@@ -178,7 +178,7 @@
         </article>
         <div class="asesorate">
           <div class="asesorate_container">
-            <a href="#sectionContacto" class="asesorate_btn">¡Asesórate!</a>          
+            <a href="#sectionContacto" class="asesorate_btn">¡Armá tu pack!</a>          
           </div>
         </div>        
         <h3 class="h3 carousel_title wow animate__animated animate__fadeInLeft">MÁS SERVICIOS</h3>
@@ -560,7 +560,7 @@
           </div>
         </article> -->
         <article class="contacto_calendly">
-          <h4 class="h4 contacto_calendly_title">ANOTÁ TU CONSULTA</h4>
+          <h4 class="h4 contacto_calendly_title">AGENDAR UN ENCUENTRO</h4>
           <!-- Principio del widget integrado de Calendly -->
           <div class="calendly-inline-widget calendly" data-url="https://calendly.com/impulsar-dev" style="min-width:300px;height:630px;"></div>
           <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
