--- a/index.html
+++ b/index.html
@@ -107,13 +107,13 @@
         <h2 id="sectionServiciosTitle" class="h2 section_servicios_title wow animate__animated animate__fadeInLeft">
           ¿QUÉ OFRECEMOS?
         </h2>
-        <article class="servicio_principal_container wow animate__animated animate__fadeInLeft">
+        <article id="particles-js" class="servicio_principal_container wow animate__animated animate__fadeInLeft">
           <div class="containerStar">
-            <i class="fa fa-solid fa-star stars_icon"></i>
+            <!-- <i class="fa fa-solid fa-star stars_icon"></i> -->
             <h3 class="h3 servicioPrincipal_title">
               NUESTROS PRODUCTOS ESTRELLA
             </h3>
-            <i class="fa fa-solid fa-star stars_icon"></i>
+            <!-- <i class="fa fa-solid fa-star stars_icon"></i> -->
             <!-- <img src="./assets/icons3D/star-dynamic-premium.png" class="servicioPrincipal_star" alt=""> -->
           </div>
         </article>
@@ -125,7 +125,7 @@
             <div id="containerSpeachImpulsoMarca" class="container_impulso_speach">
               <h3 class=" h3 impulso_title">IMPULSO DE IDENTIDAD DE MARCA</h3>
               <p class="impulso_paragraph">
-                Desarrollá una base sólida de tu marca y dale ese impulso en el mercado.
+                Desarrollá la base sólida de tu marca y dale ese impulso para destacar en el mercado.
               </p>
             </div>
             <div class="contenedor_btns">
@@ -144,7 +144,7 @@
             <div id="containerParagraphImpulsoVisual" class="container_impulso_speach">
               <h3 class=" h3 impulso_title">IMPULSO DE IDENTIDAD VISUAL </h3>
               <p class="impulso_paragraph">
-                Desarollá el estilo gráfico de tu marca, dale ese impulso en el mercado.
+                Desarollá el estilo gráfico profesional de tu marca y dale ese impulso para destacar en el mercado.
               </p>
             </div>  
             <div class="contenedor_btns">
@@ -163,7 +163,7 @@
             <div id="containerParagraphImpulsoWeb" class="container_impulso_speach">
               <h3 class=" h3 impulso_title">IMPULSO WEB</h3>
               <p class="impulso_paragraph">
-                Desarrollá la página web de tu marca, sumale herramientas web, dale ese impulso y destacar en el mercado.
+                Desarrollá la página web de tu marca y dale ese impulso para destacar en el mercado.
               </p>
             </div>
             <div class="contenedor_btns">
@@ -176,10 +176,8 @@
             </div>
           </div>
         </article>
-        <div class="asesorate">
-          <div class="asesorate_container">
-            <a href="#sectionContacto" class="asesorate_btn">¡Armá tu pack!</a>          
-          </div>
+        <div class="asesorate_container">
+          <a href="#sectionContacto" class="asesorate_btn">Pack Camino Digital</a>          
         </div>        
         <h3 class="h3 carousel_title wow animate__animated animate__fadeInLeft">MÁS SERVICIOS</h3>
         <article class="carousel_article">
@@ -671,6 +669,9 @@
     <script type="text/javascript" src="./js/carouselSwipper.js"></script>
     <!-- Vest-->
     <script src="https://unpkg.com/vest@4/dist/umd/vest.production.js"></script>
+    <!-- Particles JS-->
+    <script src="./js/particles.min.js"></script>
+    <script src="./js/app.js"></script>
     <!-- Script Wow-->
     <script src="./js/wow.min.js"></script>
     <script>
