--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Link  favicon-->
     <link rel="shortcut icon" href="./assets/favicon/cohete blanco - favicon.png" type="image/x-icon">
+    <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/AppIcons/Assets.xcassets/AppIcon.appiconset/57.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/AppIcons/Assets.xcassets/AppIcon.appiconset/114.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/AppIcons/Assets.xcassets/AppIcon.appiconset/72.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/AppIcons/Assets.xcassets/AppIcon.appiconset/144.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/AppIcons/Assets.xcassets/AppIcon.appiconset/60.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/AppIcons/Assets.xcassets/AppIcon.appiconset/120.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/AppIcons/Assets.xcassets/AppIcon.appiconset/76.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/AppIcons/Assets.xcassets/AppIcon.appiconset/152.png">
+    <link rel="icon" type="image/png" href="./assets/favicon/AppIcons/Assets.xcassets/AppIcon.appiconset/16.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="./assets/favicon/AppIcons/Assets.xcassets/AppIcon.appiconset/32.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="./assets/favicon/AppIcons/android/mipmap-xhdpi/impulsar.png" sizes="96x96">
+    <link rel="shortcut icon" sizes="16x16 24x24 32x32 48x48 64x64" href="./assets/favicon/cohete blanco - favicon.png">
     <!-- Link animation WOW - Transiciones-->
     <link rel="stylesheet" href="./js/wow.min.js">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
